// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array integration 1 1`] = `
{
  "posts": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[posts]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[posts]",
        "children": [
          {
            "nodeType": "component.array.table",
            "keyName": "posts",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
<<<<<<< HEAD
                "nodeType": "plugins.object.fieldset",
=======
                "nodeType": "component.object.fieldset",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "status",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "layout",
                    "component": "block",
                    "childrenName": "[isDraft]",
                    "hocs": "[containerRouter]",
                    "children": [
                      {
<<<<<<< HEAD
                        "nodeType": "plugins.boolean.switch",
=======
                        "nodeType": "component.boolean.switch",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                        "keyName": "isDraft",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`array integration 2 1`] = `
{
  "posts": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[posts]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[posts]",
        "children": [
          {
            "nodeType": "component.array.table",
            "keyName": "posts",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[content,buttons,otherinfo]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "content",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "component.object.fieldset",
                    "keyName": "buttons",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "component.boolean.switch",
                        "keyName": "isDraft",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  },
                  {
                    "nodeType": "component.object.fieldset",
                    "keyName": "otherinfo",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "component.string.input",
                        "keyName": "address",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "component.string.input",
                        "keyName": "introduction",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`complex schema integration 1 1`] = `
{
  "posts": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[posts]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[posts]",
        "children": [
          {
            "nodeType": "component.array.table",
            "keyName": "posts",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
<<<<<<< HEAD
                "nodeType": "plugins.object.fieldset",
=======
                "nodeType": "component.object.fieldset",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "status",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.dateTime.dateTime",
=======
                    "nodeType": "component.dateTime.dateTime",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "createAt",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.number.input",
=======
                    "nodeType": "component.number.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "draft",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
<<<<<<< HEAD
                "nodeType": "plugins.string.input",
=======
                "nodeType": "component.string.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "featureImage",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
<<<<<<< HEAD
                "nodeType": "plugins.object.fieldset",
=======
                "nodeType": "component.object.fieldset",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "pageProperty",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.number.input",
=======
                    "nodeType": "component.number.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "onTop",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.number.input",
=======
                    "nodeType": "component.number.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "order",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
<<<<<<< HEAD
                "nodeType": "plugins.object.fieldset",
=======
                "nodeType": "component.object.fieldset",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "share",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.number.input",
=======
                    "nodeType": "component.number.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "showShareBottom",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.number.input",
=======
                    "nodeType": "component.number.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "showGoodBottom",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
<<<<<<< HEAD
                "nodeType": "plugins.object.fieldset",
=======
                "nodeType": "component.object.fieldset",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "other",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.string.input",
=======
                    "nodeType": "component.string.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "introduction",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.geoPoint.default",
=======
                    "nodeType": "component.geoPoint.default",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "position",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,description]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "component.string.input",
                "keyName": "description",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "component.object.fieldset",
            "keyName": "info",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "component.object.fieldset",
                "keyName": "info2",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "name2",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "popup": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[popup]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[popup]",
        "children": [
          {
            "nodeType": "component.array.table",
            "keyName": "popup",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
<<<<<<< HEAD
                "nodeType": "plugins.string.input",
=======
                "nodeType": "component.string.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  },
  "tab": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[tab]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[tab]",
        "children": [
          {
            "nodeType": "component.array.tab",
            "keyName": "tab",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
<<<<<<< HEAD
                "nodeType": "plugins.string.input",
=======
                "nodeType": "component.string.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  },
  "undefined": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[undefined]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[undefined]",
        "children": [
          {
            "nodeType": "component.array.table",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
<<<<<<< HEAD
                "nodeType": "plugins.string.input",
=======
                "nodeType": "component.string.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`complex schema integration 2 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,test,thumbnail,contactInfo]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "keyName": "name",
                "childrenName": "[name,nickname]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "component.string.input",
                    "keyName": "nickname",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
                "nodeType": "component.string.input",
                "keyName": "test",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "component.object.fieldset",
                "keyName": "thumbnail",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "imageName",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "component.file.file",
                    "keyName": "imageSrc",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
                "nodeType": "component.object.fieldset",
                "keyName": "contactInfo",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "component.array.table",
                    "keyName": "phones",
                    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "component.string.select",
                        "keyName": "type",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "component.string.input",
                        "keyName": "value",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  },
                  {
                    "nodeType": "component.array.table",
                    "keyName": "addresses",
                    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "component.string.select",
                        "keyName": "type",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "component.string.input",
                        "keyName": "value",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  },
                  {
                    "nodeType": "component.array.table",
                    "keyName": "emails",
                    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "component.string.select",
                        "keyName": "type",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "component.string.input",
                        "keyName": "value",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object 
  integration 6 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
<<<<<<< HEAD
            "nodeType": "plugins.object.fieldset",
=======
            "nodeType": "component.object.fieldset",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
            "keyName": "info1",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[info2]",
                "hocs": "[containerRouter]",
                "children": [
                  {
<<<<<<< HEAD
                    "nodeType": "plugins.object.fieldset",
=======
                    "nodeType": "component.object.fieldset",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                    "keyName": "info2",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
<<<<<<< HEAD
                        "nodeType": "plugins.string.input",
=======
                        "nodeType": "component.string.input",
>>>>>>> 472f9c90d84e39403d3e85b60910c9ad320ef2dd
                        "keyName": "name3",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 1 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 2 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "component.string.input",
            "keyName": "nickname",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 3 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,nickname]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "component.string.input",
                "keyName": "nickname",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 4 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[info1]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.object.fieldset",
                "keyName": "info1",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 5 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[info1]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.object.fieldset",
                "keyName": "info1",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "layout",
                    "component": "block",
                    "childrenName": "[name]",
                    "hocs": "[containerRouter]",
                    "children": [
                      {
                        "nodeType": "component.string.input",
                        "keyName": "name",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 7 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,description]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "component.string.input",
                "keyName": "description",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "component.object.fieldset",
            "keyName": "info",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "component.object.fieldset",
                "keyName": "info2",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "name2",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 8 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,description]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "component.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "component.string.input",
                "keyName": "description",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "component.object.fieldset",
            "keyName": "info",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "component.object.fieldset",
                "keyName": "info2",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "layout",
                    "component": "block",
                    "childrenName": "[name2]",
                    "hocs": "[containerRouter]",
                    "children": [
                      {
                        "nodeType": "component.string.input",
                        "keyName": "name2",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "info3": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info3]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[info3]",
        "children": [
          {
            "nodeType": "component.array.table",
            "keyName": "info3",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[name,description]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "component.string.input",
                    "keyName": "description",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
                "nodeType": "component.object.fieldset",
                "keyName": "info",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "component.object.fieldset",
                    "keyName": "info2",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "component.string.input",
                        "keyName": "name2",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 9 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "component.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[name]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "component.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;
